BARC UAT/src/objects/Operator_Technician__c.object
<CustomObject>
    <fields>
        <fullName>CAFID__c</fullName>
        <label>CAFID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Local_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Operator</label>
        <referenceTo>Local_Operator__c</referenceTo>
        <relationshipName>Operator_Technician</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator</label>
        <referenceTo>Operator__c</referenceTo>
        <relationshipName>Operator_Technician</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pin_Code__c</fullName>
        <label>Pin Code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TECH</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Billing_Address__c</fullName>
        <label>Technician Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technician_City__c</fullName>
        <label>Technician City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Country__c</fullName>
        <label>Technician Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_District__c</fullName>
        <label>Technician District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Email__c</fullName>
        <label>Technician Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Technician_Name__c</fullName>
        <label>Technician Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Phone__c</fullName>
        <label>Technician Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Technician_Pincode__c</fullName>
        <label>Technician Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_State__c</fullName>
        <label>Technician State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Town_Name__c</fullName>
        <label>Technician Town Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town_Village_Name__c</fullName>
        <label>Town / Village Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Operator User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Technician_Name__c</columns>
        <columns>Operator__c</columns>
        <columns>Local_Operator__c</columns>
        <columns>Technician_Phone__c</columns>
        <columns>Technician_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Technician Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operator Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>